--- a/ansible.cfg
+++ b/ansible.cfg
@@ -137,8 +137,7 @@
 ;hash_behaviour=replace
 
 # (pathlist) Comma-separated list of Ansible inventory sources
-;inventory=['/etc/ansible/hosts']
-
+inventory=/root/ansible1/inventory/my_inventory
 # (pathspec) Colon-separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=/root/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
 
@@ -329,7 +328,7 @@
 
 # (boolean) Set this to "False" if you want to avoid host key checking by the underlying connection plugin Ansible uses to connect to the host.
 # Please read the documentation of the specific connection plugin used for details.
-;host_key_checking=True
+host_key_checking=False
 
 # (boolean) Facts are available inside the `ansible_facts` variable, this setting also pushes them as their own vars in the main namespace.
 # Unlike inside the `ansible_facts` dictionary where the prefix `ansible_` is removed from fact names, these will have the exact names that are returned by the module.
